fix: multiple tab completion bugs
1) kubectl tab completions have repeated prefix text
2) tab completions render side-by-side instead of below Input
3) popup tab completions are not visible
4) kubectl tab completions test was disabled, needs to be revived

Fixes #4281

--- a/plugins/plugin-client-common/web/css/static/repl.scss
+++ b/plugins/plugin-client-common/web/css/static/repl.scss
@@ -239,7 +239,7 @@ body/*:not(.sidecar-full-screen)*/ repl.sidecar-visible .repl-selection, body/*.
 
 .repl-block {
   .repl-input {
-    align-items: center;
+    flex-direction: column;
 
     .kui--input-and-context {
       flex: 1;
